# cinedex

./: Cargo.toml  README.md
src/: main.rs  rating.rs  search.rs
