[package]
name = "cinedex"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12", features = ["client", "gateway", "model", "standard_framework"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
dotenv = "0.15"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2"
